--- a/SherpaDesk/AddTime.xaml
+++ b/SherpaDesk/AddTime.xaml
@@ -60,7 +60,15 @@
 
             <TextBlock HorizontalAlignment="left" Grid.Row="0" Margin="10,0,0,0" TextWrapping="Wrap" Text="Log My Time" VerticalAlignment="Top" FontSize="40"/>
 
-            <telerikInput:RadDatePicker x:Name="DateField" Grid.Column="2" Height="60" FontSize="40" Grid.Row="0" DisplayValueFormat="dddd, MMMM dd, yyyy" ItemLength="90" Margin="0,0,0,0" />
+            <Grid Grid.Column="2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="10" />
+                    <ColumnDefinition Width="auto" />
+                </Grid.ColumnDefinitions>
+                <TextBlock x:Name="DateLabel" Grid.Column="0" FontSize="40" VerticalAlignment="Center" />
+                <telerikInput:RadDatePicker x:Name="DateField" Grid.Column="2" Height="60" Width="30" FontSize="40" Grid.Row="0" DisplayValueFormat="dddd, MMMM dd, yyyy" ItemLength="90" Margin="0,0,0,0" ValueChanged="DateField_ValueChanged" />
+            </Grid>
 
             <TextBlock HorizontalAlignment="left" Grid.Row="1" Margin="10,25,0,0" TextWrapping="Wrap" Text="Technician" VerticalAlignment="Top" FontSize="30"/>
             <ComboBox Name="TechnicianList" Grid.Column="0" Grid.Row="2" FontSize="24" HorizontalAlignment="Left" Width="500" Height="50" Margin="10,0,0,0" VerticalAlignment="Top">
@@ -99,14 +107,29 @@
                 </Grid.ColumnDefinitions>
 
                 <TextBlock HorizontalAlignment="left" Grid.Row="0" Grid.Column="1" Margin="0,25,0,0" TextWrapping="Wrap" Text="Start" VerticalAlignment="Top" FontSize="30"/>
-                <TextBlock HorizontalAlignment="left" Grid.Row="0" Grid.Column="1" Margin="70,30,0,0" TextWrapping="Wrap" Text="hh:mm" VerticalAlignment="Top" FontSize="20"/>
-                <TimePicker x:Name="StartTimePicker" Grid.Column="1" HorizontalAlignment="Left" Margin="0,0,0,0" Grid.Row="1" VerticalAlignment="Top" ClockIdentifier="12HourClock" FontSize="36" TimeChanged="StartTimePicker_TimeChanged"/>
-
+                <Grid Grid.Column="1" Grid.Row="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto" />
+                        <ColumnDefinition Width="10" />
+                        <ColumnDefinition Width="auto" />
+                    </Grid.ColumnDefinitions>
+                    <TextBlock x:Name="StartTimeLabel" Grid.Column="0" FontSize="40" VerticalAlignment="Top" Margin="0,5,0,0" />
+                    <telerikInput:RadTimePicker x:Name="StartTimePicker" Grid.Column="2" Height="50" Width="30" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" ValueChanged="StartTimePicker_ValueChanged" />
+                </Grid>
+                
+                
                 <TextBlock HorizontalAlignment="left" Grid.Row="0" Grid.Column="5" Margin="0,25,0,0" TextWrapping="Wrap" Text="Stop" VerticalAlignment="Top" FontSize="30"/>
-                <TextBlock HorizontalAlignment="left" Grid.Row="0" Grid.Column="5" Margin="70,30,0,0" TextWrapping="Wrap" Text="hh:mm" VerticalAlignment="Top" FontSize="20"/>
 
-                <TimePicker x:Name="EndTimePicker" Grid.Column="5" HorizontalAlignment="Left" Margin="0,0,0,0" Grid.Row="1" VerticalAlignment="Top" ClockIdentifier="12HourClock" FontSize="36" TimeChanged="EndTimePicker_TimeChanged"/>
-                <TextBox x:Name="HoursTextBox" Margin="0,0,0,0" InputScope="NumberFullWidth" Text="0.00" HorizontalAlignment="Center" Height="48" Grid.Row="1" TextWrapping="Wrap" Grid.Column="9" VerticalAlignment="Top" FontSize="30" Width="130" />
+                <Grid Grid.Column="5" Grid.Row="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto" />
+                        <ColumnDefinition Width="10" />
+                        <ColumnDefinition Width="auto" />
+                    </Grid.ColumnDefinitions>
+                    <TextBlock x:Name="EndTimeLabel" Grid.Column="0" FontSize="40" VerticalAlignment="Top" Margin="0,5,0,0" />
+                    <telerikInput:RadTimePicker x:Name="EndTimePicker" Grid.Column="2" Height="50" Width="30" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" ValueChanged="EndTimePicker_ValueChanged" />
+                </Grid>
+                <TextBox x:Name="HoursTextBox" Margin="0,3,0,0" InputScope="NumberFullWidth" Text="0.00" HorizontalAlignment="Center" Height="48" Grid.Row="1" TextWrapping="Wrap" Grid.Column="9" VerticalAlignment="Top" FontSize="30" Width="130" />
                 <TextBlock HorizontalAlignment="left" Grid.Row="0" Grid.Column="9" Margin="0,25,0,0" TextWrapping="Wrap" Text="Hours" VerticalAlignment="Top" FontSize="30"/>
             </Grid>
             <Button Content="Save My Time" Grid.Column="2" HorizontalAlignment="Left" Grid.Row="8" VerticalAlignment="Top" Height="70" Grid.RowSpan="2" Width="500" FontSize="36" Background="#FF2F9129" Click="Button_Click"/>
