--- a/SherpaDesk/App.xaml
+++ b/SherpaDesk/App.xaml
@@ -7,12 +7,11 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-
-                <!-- 
-                    Styles that define common aspects of the platform look and feel
-                    Required by Visual Studio project and item templates
-                 -->
                 <ResourceDictionary Source="Common/StandardStyles.xaml"/>
+                <ResourceDictionary Source="ms-appx:///Telerik.UI.Xaml.Primitives/Themes/ThemeColorsLight.xaml"/>
+                <ResourceDictionary Source="ms-appx:///Telerik.UI.Xaml.Primitives/Themes/ThemeResourcesLight.xaml"/>
+                <ResourceDictionary Source="ms-appx:///Telerik.UI.Xaml.Grid/Themes/ThemeResourcesLight.xaml"/>
+                <ResourceDictionary Source="ms-appx:///Telerik.UI.Xaml.Input/Themes/ThemeResourcesLight.xaml"/>
             </ResourceDictionary.MergedDictionaries>
 
         </ResourceDictionary>
