--- a/SherpaDesk/Common/StandardStyles.xaml
+++ b/SherpaDesk/Common/StandardStyles.xaml
@@ -1408,6 +1408,7 @@
         <Setter Property="TextWrapping" Value="NoWrap"/>
         <Setter Property="VerticalAlignment" Value="Bottom"/>
         <Setter Property="Margin" Value="0,0,30,40"/>
+        <Setter Property="Foreground" Value="White"/>
     </Style>
 
     <Style x:Key="PageSubheaderTextStyle" TargetType="TextBlock" BasedOn="{StaticResource SubheaderTextStyle}">
