--- a/SherpaDesk/WorkList.xaml
+++ b/SherpaDesk/WorkList.xaml
@@ -1,6 +1,6 @@
 ﻿<common:LayoutAwarePage
     x:Name="pageRoot"
-    x:Class="SherpaDesk.NewMessages"
+    x:Class="SherpaDesk.WorkList"
     DataContext="{Binding DefaultViewModel, RelativeSource={RelativeSource Self}}"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -24,8 +24,8 @@
         * Row 0 contains the back button and page title
         * Row 1 contains the rest of the page layout
     -->
-    <Grid Style="{StaticResource LayoutRootStyle}" Background="Transparent">
-        
+    <Grid x:Name="grid" Style="{StaticResource LayoutRootStyle}" Background="Transparent" RequestedTheme="Light">
+
         <Grid.RowDefinitions>
             <RowDefinition Height="240"/>
             <RowDefinition Height="*"/>
@@ -34,9 +34,9 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
-            <TextBlock x:Name="pageTitle" Grid.Column="0" VerticalAlignment="Bottom" Margin="0,0,0,30" Style="{StaticResource PageHeaderTextStyle}" Text="New Messages" FontWeight="Normal"/>
+            <TextBlock x:Name="pageTitle" Grid.Column="0" VerticalAlignment="Bottom" Margin="0,0,0,30" Style="{StaticResource PageHeaderTextStyle}" Text="Open Tickets" FontWeight="Normal" />
         </Grid>
-        <telerik:RadDataGrid UserGroupMode="Disabled" Grid.Row="1" AutoGenerateColumns="False" UserColumnReorderMode="None" UserFilterMode="Disabled" Background="#FFCBDCEA" AlternateRowBackground="#FF6E91A8" GridLinesBrush="#FFB7B7B7" BorderBrush="Transparent">
+        <telerik:RadDataGrid x:Name="ItemsGrid" UserGroupMode="Disabled" Grid.Row="1" AutoGenerateColumns="False" UserColumnReorderMode="None" UserFilterMode="Disabled" UserSortMode="Single" GridLinesVisibility="Horizontal" BorderBrush="#FF006AC1">
             <telerik:RadDataGrid.Columns>
                 <telerik:DataGridTextColumn PropertyName="TicketId" Header="Tkt#">
                     <telerik:DataGridTextColumn.HeaderStyle>
@@ -47,60 +47,79 @@
                         </Style>
                     </telerik:DataGridTextColumn.HeaderStyle>
                 </telerik:DataGridTextColumn>
-                <telerik:DataGridTextColumn PropertyName="EndUser" Header="End User">
+                <telerik:DataGridTextColumn PropertyName="UserFullName" Header="End User">
                     <telerik:DataGridTextColumn.HeaderStyle>
                         <Style TargetType="gridPrimitives:DataGridColumnHeader">
                             <Setter Property="Background" Value="#FF006AC1"/>
                             <Setter Property="FontSize" Value="20" />
                             <Setter Property="Foreground" Value="White" />
                         </Style>
-                    </telerik:DataGridTextColumn.HeaderStyle>                    
+                    </telerik:DataGridTextColumn.HeaderStyle>
                 </telerik:DataGridTextColumn>
-                <telerik:DataGridTextColumn PropertyName="TechName" Header="Tech Name">
+                <telerik:DataGridTextColumn PropertyName="TechnicianFullName" Header="Tech Name">
                     <telerik:DataGridTextColumn.HeaderStyle>
                         <Style TargetType="gridPrimitives:DataGridColumnHeader">
                             <Setter Property="Background" Value="#FF006AC1"/>
                             <Setter Property="FontSize" Value="20" />
                             <Setter Property="Foreground" Value="White" />
                         </Style>
-                    </telerik:DataGridTextColumn.HeaderStyle>                    
+                    </telerik:DataGridTextColumn.HeaderStyle>
                 </telerik:DataGridTextColumn>
-                <telerik:DataGridTextColumn PropertyName="Account" Header="Account">
+                <telerik:DataGridTextColumn PropertyName="AccountName" Header="Account">
                     <telerik:DataGridTextColumn.HeaderStyle>
                         <Style TargetType="gridPrimitives:DataGridColumnHeader">
                             <Setter Property="Background" Value="#FF006AC1"/>
                             <Setter Property="FontSize" Value="20" />
                             <Setter Property="Foreground" Value="White" />
                         </Style>
-                    </telerik:DataGridTextColumn.HeaderStyle>                    
+                    </telerik:DataGridTextColumn.HeaderStyle>
                 </telerik:DataGridTextColumn>
-                <telerik:DataGridTextColumn PropertyName="Class" Header="Class">
+                <telerik:DataGridTextColumn PropertyName="ClassName" Header="Class">
                     <telerik:DataGridTextColumn.HeaderStyle>
                         <Style TargetType="gridPrimitives:DataGridColumnHeader">
                             <Setter Property="Background" Value="#FF006AC1"/>
                             <Setter Property="FontSize" Value="20" />
                             <Setter Property="Foreground" Value="White" />
                         </Style>
-                    </telerik:DataGridTextColumn.HeaderStyle>                    
+                    </telerik:DataGridTextColumn.HeaderStyle>
                 </telerik:DataGridTextColumn>
-                <telerik:DataGridTextColumn PropertyName="Time" Header="Time">
+                <telerik:DataGridTextColumn PropertyName="СreatedTime" Header="Time">
                     <telerik:DataGridTextColumn.HeaderStyle>
                         <Style TargetType="gridPrimitives:DataGridColumnHeader">
                             <Setter Property="Background" Value="#FF006AC1"/>
                             <Setter Property="FontSize" Value="20" />
                             <Setter Property="Foreground" Value="White" />
                         </Style>
-                    </telerik:DataGridTextColumn.HeaderStyle>                    
+                    </telerik:DataGridTextColumn.HeaderStyle>
                 </telerik:DataGridTextColumn>
-                <telerik:DataGridTextColumn PropertyName="Status" Header="Days Old | Status">
-                    <telerik:DataGridTextColumn.HeaderStyle>
+                <telerik:DataGridTemplateColumn Header="Days Old">
+                    <telerik:DataGridTemplateColumn.HeaderStyle>
                         <Style TargetType="gridPrimitives:DataGridColumnHeader">
                             <Setter Property="Background" Value="#FF006AC1"/>
                             <Setter Property="FontSize" Value="20" />
                             <Setter Property="Foreground" Value="White" />
                         </Style>
-                    </telerik:DataGridTextColumn.HeaderStyle>                    
-                </telerik:DataGridTextColumn>
+                    </telerik:DataGridTemplateColumn.HeaderStyle>
+                    <telerik:DataGridTemplateColumn.CellContentTemplate>
+                        <DataTemplate>
+                            <TextBlock VerticalAlignment="Center" Margin="7,0,0,0" Text="1d 15h" FontSize="20" />
+                        </DataTemplate>
+                    </telerik:DataGridTemplateColumn.CellContentTemplate>
+                </telerik:DataGridTemplateColumn>
+                <telerik:DataGridTemplateColumn Header="Status">
+                    <telerik:DataGridTemplateColumn.HeaderStyle>
+                        <Style TargetType="gridPrimitives:DataGridColumnHeader">
+                            <Setter Property="Background" Value="#FF006AC1"/>
+                            <Setter Property="FontSize" Value="20" />
+                            <Setter Property="Foreground" Value="White" />
+                        </Style>
+                    </telerik:DataGridTemplateColumn.HeaderStyle>
+                    <telerik:DataGridTemplateColumn.CellContentTemplate>
+                        <DataTemplate>
+                            <TextBlock VerticalAlignment="Center" Text="{Binding Status}" FontWeight="Bold" />
+                        </DataTemplate>
+                    </telerik:DataGridTemplateColumn.CellContentTemplate>
+                </telerik:DataGridTemplateColumn>
             </telerik:RadDataGrid.Columns>
         </telerik:RadDataGrid>
         <VisualStateManager.VisualStateGroups>
