--- a/SherpaDesk/AddTime.xaml
+++ b/SherpaDesk/AddTime.xaml
@@ -60,7 +60,7 @@
 
             <TextBlock HorizontalAlignment="left" Grid.Row="0" Margin="10,0,0,0" TextWrapping="Wrap" Text="Log My Time" VerticalAlignment="Top" FontSize="40"/>
 
-            <Grid Grid.Column="2">
+            <Grid Grid.Column="2" Grid.ColumnSpan="3">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="auto" />
                     <ColumnDefinition Width="10" />
@@ -71,21 +71,21 @@
             </Grid>
 
             <TextBlock HorizontalAlignment="left" Grid.Row="1" Margin="10,25,0,0" TextWrapping="Wrap" Text="Technician" VerticalAlignment="Top" FontSize="30"/>
-            <ComboBox Name="TechnicianList" Grid.Column="0" Grid.Row="2" FontSize="24" HorizontalAlignment="Left" Width="500" Height="50" Margin="10,0,0,0" VerticalAlignment="Top">
+            <ComboBox Name="TechnicianList" Grid.Column="0" Grid.Row="2" FontSize="24" HorizontalAlignment="Left" Width="400" Height="50" Margin="10,0,0,0" VerticalAlignment="Top">
                 <ComboBoxItem x:Name="TechnicianMe" />
             </ComboBox>
 
             <TextBlock HorizontalAlignment="left" Grid.Row="1" Grid.Column="2" Margin="0,25,0,0" TextWrapping="Wrap" Text="Account" VerticalAlignment="Top" FontSize="30"/>
-            <ComboBox Name="AccountList" Grid.Column="2" Grid.Row="2" FontSize="24" HorizontalAlignment="Left" Width="500" Height="50" Margin="0,0,0,0" VerticalAlignment="Top">
+            <ComboBox Name="AccountList" Grid.Column="2" Grid.Row="2" FontSize="24" HorizontalAlignment="Left" Width="400" Height="50" Margin="0,0,0,0" VerticalAlignment="Top">
                 <ComboBoxItem Content="Add New Account..." Foreground="#FF00A10A" />
             </ComboBox>
 
             <TextBlock HorizontalAlignment="left" Grid.Row="1" Grid.Column="4" Margin="0,25,0,0" TextWrapping="Wrap" Text="Task Type" VerticalAlignment="Top" FontSize="30"/>
-            <ComboBox Name="TaskTypeList" Grid.Column="4" Grid.Row="2" FontSize="24" HorizontalAlignment="Left" Width="500" Height="50" Margin="0,0,0,0" VerticalAlignment="Top">
+            <ComboBox Name="TaskTypeList" Grid.Column="4" Grid.Row="2" FontSize="24" HorizontalAlignment="Left" Width="400" Height="50" Margin="0,0,0,0" VerticalAlignment="Top">
             </ComboBox>
 
             <TextBlock HorizontalAlignment="left" Grid.Row="3" Grid.Column="0" Margin="10,25,0,0" TextWrapping="Wrap" Text="Notes" VerticalAlignment="Top" FontSize="30"/>
-            <TextBox Name="NoteTextBox" AcceptsReturn="True" Margin="10,0,0,0" Grid.RowSpan="3" HorizontalAlignment="Center" Height="300" Grid.Row="4" TextWrapping="Wrap" Grid.Column="0" Text="" VerticalAlignment="Top" FontSize="24" Width="500" />
+            <TextBox Name="NoteTextBox" AcceptsReturn="True" Margin="10,0,0,0" Grid.RowSpan="3" HorizontalAlignment="Center" Height="300" Grid.Row="4" TextWrapping="Wrap" Grid.Column="0" Text="" VerticalAlignment="Top" FontSize="24" Width="400" />
             <CheckBox Name="BillableBox" Content="Billable" HorizontalAlignment="Left" Margin="10,10,0,0" Grid.Row="7" VerticalAlignment="Top" FontSize="20" IsChecked="True"/>
 
             <Grid Style="{StaticResource LayoutRootStyle}" Grid.Column="2" Grid.ColumnSpan="3" Grid.RowSpan="3" Grid.Row="4" Background="#FF6B3B28">
@@ -131,8 +131,9 @@
                 </Grid>
                 <TextBox x:Name="HoursTextBox" Margin="0,3,0,0" InputScope="NumberFullWidth" Text="0.00" HorizontalAlignment="Center" Height="48" Grid.Row="1" TextWrapping="Wrap" Grid.Column="9" VerticalAlignment="Top" FontSize="30" Width="130" />
                 <TextBlock HorizontalAlignment="left" Grid.Row="0" Grid.Column="9" Margin="0,25,0,0" TextWrapping="Wrap" Text="Hours" VerticalAlignment="Top" FontSize="30"/>
+                <TextBlock x:Name="ErrorHours" Grid.Column="1" HorizontalAlignment="Right" Margin="0,75,0,0" Grid.ColumnSpan="9" Grid.Row="1" TextWrapping="Wrap" Text="" VerticalAlignment="Top" FontSize="20" Foreground="#FFF26C6C" FontWeight="Bold"/>
             </Grid>
-            <Button Content="Save My Time" Grid.Column="2" HorizontalAlignment="Left" Grid.Row="8" VerticalAlignment="Top" Height="70" Grid.RowSpan="2" Width="500" FontSize="36" Background="#FF2F9129" Click="Button_Click"/>
+            <Button Content="Save My Time" Grid.Column="2" HorizontalAlignment="Left" Grid.Row="8" VerticalAlignment="Top" Height="70" Grid.RowSpan="2" Width="400" FontSize="36" Background="#FF2F9129" Click="Button_Click"/>
         </Grid>
         <VisualStateManager.VisualStateGroups>
 
