--- a/SherpaDesk/TicketDetails.xaml
+++ b/SherpaDesk/TicketDetails.xaml
@@ -42,19 +42,40 @@
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="auto" />
+                <RowDefinition Height="*" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="auto" />
                 <ColumnDefinition Width="10" />
+                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="100" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
-            <Rectangle x:Name="SubjectDecorate" Grid.ColumnSpan="3" Fill="#4C8787FE" HorizontalAlignment="Stretch" Margin="-30,0,10,0" />
+            <Rectangle x:Name="SubjectDecorate" Grid.ColumnSpan="5" Fill="#4C8787FE" HorizontalAlignment="Stretch" Margin="-30,0,10,0" />
             <TextBlock x:Name="SubjectLabel" Text="Subject" FontSize="50" Grid.Row="0" Margin="0,0,0,0" Grid.ColumnSpan="3" Foreground="White" />
             <TextBlock Text="Artem Korzhavin" FontSize="40" Grid.Row="1" Foreground="White" />
             <TextBlock Text="Initial Post" HorizontalAlignment="Left" Canvas.ZIndex="1" Grid.Row="1" Grid.Column="2" Margin="12,10,0,0" FontSize="25" Foreground="White" />
             <Ellipse Fill="#7F739CB0" HorizontalAlignment="Left" Canvas.ZIndex="0" Grid.Row="1" Grid.Column="2" Height="36" Margin="0,10,0,0" VerticalAlignment="Top" Width="139"  RenderTransformOrigin="0.459,0.468"/>
             <TextBlock Text="Details" FontSize="30" Grid.ColumnSpan="3" Grid.Row="2" Margin="0,30,0,0" Foreground="White" />
             <TextBlock Text="Following file was uploaded:" Grid.ColumnSpan="3" FontSize="30" Grid.Row="3" Margin="0,30,0,0" Foreground="White" />
+            <Grid Grid.Column="4" Grid.Row="1" Grid.RowSpan="4" MinWidth="500" Canvas.ZIndex="1" Margin="10,10,20,10">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                <ScrollViewer VerticalAlignment="Stretch" MaxHeight="350" Margin="0,0,0,50" Grid.RowSpan="3" VerticalScrollMode="Auto" VerticalScrollBarVisibility="Visible">
+                    <TextBlock x:Name="WorkpadLabel" MaxWidth="500" VerticalAlignment="Stretch" TextWrapping="WrapWholeWords" HorizontalAlignment="Left" Text="Test test tes qweqwTest test teTest test tes qweqwTest test tes qTest test tes qweqwTest test tes qs qweqwe qw wqe qwe qwe qwe  tTest test tes qweqwe qw wqe qwe qwe qwe  tTest test tes qweqwe qw wqe qwe qwe qwe  tTest test tes qweqwe qw wqe qwe qwe qwe  tTest test tes qweqwe qw wqe qwe qwe qwe  te qw wqe qwe qwe qwe  tTest test tes qweqwTest test teTest test tes qweqwTest test tes qTest test tes qweqwTest test tes qs qweqwe qw wqe qwe qwe qwe  tTest test tes qweqwe qw wqe qwe qwe qwe  tTest test tes qweqwe qw wqe qwe qwe qwe  tTest test tes qweqwe qw wqe qwe qwe qwe  tTest test tes qweqwe qw wqe qwe qwe qwe  te qw wqe qwe qwe qwe  tTest test tes qweqwTest test teTest test tes qweqwTest test tes qTest test tes qweqwTest test tes qs qweqwe qw wqe qwe qwe qwe  tTest test tes qweqwe qw wqe qwe qwe qwe  tTest test tes qweqwe qw wqe qwe qwe qwe  tTest test tes qweqwe qw wqe qwe qwe qwe  tTest test tes qweqwe qw wqe qwe qwe qwe  te qw wqe qwe qwe qwe  t Test test tes qweqwTest test teTest test tes qweqwTest test tes qTest test tes qweqwTest test tes qs qweqwe qw wqe qwe qwe qwe  tTest test tes qweqwe qw wqe qwe qwe qwe  tTest test tes qweqwe qw wqe qwe qwe qwe  tTest test tes qweqwe qw wqe qwe qwe qwe  tTest test tes qweqwe qw wqe qwe qwe qwe  te qw wqe qwe qwe qwe  tTest test tes qweqwTest test teTest test tes qweqwTest test tes qTest test tes qweqwTest test tes qs qweqwe qw wqe qwe qwe qwe  tTest test tes qweqwe qw wqe qwe qwe qwe  tTest test tes qweqwe qw wqe qwe qwe qwe  tTest test tes qweqwe qw wqe qwe qwe qwe  tTest test tes qweqwe qw wqe qwe qwe qwe  te qw wqe qwe qwe qwe  tTest test tes qweqwTest test teTest test tes qweqwTest test tes qTest test tes qweqwTest test tes qs qweqwe qw wqe qwe qwe qwe  tTest test tes qweqwe qw wqe qwe qwe qwe  tTest test tes qweqwe qw wqe qwe qwe qwe  tTest test tes qweqwe qw wqe qwe qwe qwe  tTest test tes qweqwe qw wqe qwe qwe qwe  te qw wqe qwe qwe qwe  t" Foreground="White" FontSize="20" />
+                </ScrollViewer>
+                <Button x:Name="WorkpadButton" Content="Edit Workpad" VerticalAlignment="Bottom" Grid.Row="2" Canvas.ZIndex="10" Foreground="White" FontSize="20" Tapped="WorkpadButton_Tapped" />
+                <Button x:Name="WorkpadSaveButton" Content="Save" Grid.Row="2" VerticalAlignment="Bottom" Canvas.ZIndex="10" Foreground="White" FontSize="20" Visibility="Collapsed" Tapped="WorkpadSaveButton_Tapped" />
+                <Button x:Name="WorkpadCancelButton" Content="Cancel" Grid.Row="2" VerticalAlignment="Bottom" Canvas.ZIndex="10" Margin="80,0,0,0" Foreground="White" FontSize="20" Visibility="Collapsed" Tapped="WorkpadCancelButton_Tapped" />
+                <RichEditBox x:Name="WorkpadEditBox" Margin="0,0,0,50" Grid.Row="2" Typography.StylisticSet1="True" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Visibility="Collapsed" />
+            </Grid>
+            <Rectangle Grid.ColumnSpan="2" Grid.Row="1" Canvas.ZIndex="0" Grid.Column="4" Grid.RowSpan="4" Fill="#4C9F6300" HorizontalAlignment="Stretch" Margin="0,0,10,0" />
         </Grid>
         <VisualStateManager.VisualStateGroups>
 
