--- a/SherpaDesk/Info.xaml
+++ b/SherpaDesk/Info.xaml
@@ -134,8 +134,8 @@
                 </telerik:RadCustomHubTile>
 
             </Grid>
-            <Frame x:Name="LeftFrame" Grid.Column="1" Margin="30,0,0,30" />
-            <Frame x:Name="RightFrame" Grid.Column="5" Margin="30,0,0,30" />
+            <Frame x:Name="LeftFrame" VerticalAlignment="Top" Grid.Column="1" Margin="30,0,0,30" />
+            <Frame x:Name="RightFrame" VerticalAlignment="Top" Grid.Column="5" Margin="30,0,0,30" />
         </Grid>
     </ScrollViewer>
     <VisualStateManager.VisualStateGroups>
