--- a/SherpaDesk/TimesheetResources.xaml
+++ b/SherpaDesk/TimesheetResources.xaml
@@ -3,12 +3,13 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:SherpaDesk.Common">
 
+    <local:CellModelToTimeLogConverter x:Key="timeLogConverter" />
+
     <DataTemplate x:Key="template">
         <Grid>
-            <TextBlock Foreground="Black" Text="22" FontSize="15" FontWeight="Bold" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,5,0,10" />
+            <TextBlock Foreground="Black" Text="{Binding Converter={StaticResource timeLogConverter}}" FontSize="15" FontWeight="Bold" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,5,0,10" />
             <TextBlock Text="{Binding Label}" Foreground="#FF767676" FontSize="13.333" VerticalAlignment="Bottom" Margin="6,0,0,4" />
         </Grid>
     </DataTemplate>
-
     <local:CustomStyleSelector x:Key="selector" EventTemplate="{StaticResource template}" />
 </ResourceDictionary>
