--- a/SherpaDesk/TicketDetails.xaml
+++ b/SherpaDesk/TicketDetails.xaml
@@ -51,7 +51,7 @@
                 <ColumnDefinition Width="10" />
                 <ColumnDefinition Width="auto" />
                 <ColumnDefinition Width="100" />
-                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="auto" />
             </Grid.ColumnDefinitions>
             <Rectangle x:Name="SubjectDecorate" Grid.ColumnSpan="5" Fill="#4C8787FE" HorizontalAlignment="Stretch" Margin="-30,0,10,0" />
             <TextBlock x:Name="SubjectLabel" Text="" FontSize="50" Grid.Row="0" Margin="0,0,0,0" Grid.ColumnSpan="3" Foreground="White" />
@@ -61,8 +61,8 @@
             <ScrollViewer VerticalAlignment="Stretch" Grid.ColumnSpan="3" Grid.Row="3" Margin="0,4,0,61" MaxHeight="150" Width="550" VerticalScrollMode="Auto" VerticalScrollBarVisibility="Auto">
                 <TextBlock x:Name="InitialPostLabel" Text="" Margin="0,0,18,0" TextWrapping="Wrap" FontSize="25" Foreground="White" />
             </ScrollViewer>
-            <TextBlock Text="Following file was uploaded:" Grid.ColumnSpan="3" FontSize="30" Grid.Row="3" Margin="0,160,0,0" Foreground="White" />
-            <FlipView x:Name="AttachedView" Grid.Row="4" Margin="0,0,0,0" Width="300" Height="200">
+            <TextBlock x:Name="FilesLabel" Visibility="Collapsed" Text="Following file was uploaded:" Grid.ColumnSpan="3" FontSize="30" Grid.Row="3" Margin="0,160,0,0" Foreground="White" />
+            <FlipView x:Name="AttachedView" Visibility="Collapsed" Grid.Row="4" HorizontalAlignment="Left" Margin="0,0,0,0" Width="300" Height="200">
                 <FlipView.ItemTemplate>
                     <DataTemplate>
                         <Border BorderBrush="DarkGray" BorderThickness="1,1,1,1">
@@ -74,8 +74,8 @@
                     </DataTemplate>
                 </FlipView.ItemTemplate>
             </FlipView>
-            <telerikPrimitives:RadPaginationControl DisplayMode="IndexLabel" ScrollViewer.HorizontalScrollMode="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" Grid.Row="4" Width="300" Margin="10,220,0,0" Foreground="White" PageProvider="{Binding ElementName=AttachedView}" />
-            <Grid Grid.Column="4" Grid.Row="1" Grid.RowSpan="4" MinWidth="500" Canvas.ZIndex="1" Margin="10,10,20,10">
+            <telerikPrimitives:RadPaginationControl Visibility="Collapsed" HorizontalAlignment="Left" x:Name="AttachedPages" DisplayMode="IndexLabel" ScrollViewer.HorizontalScrollMode="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" Grid.Row="4" Width="300" Margin="10,220,0,0" Foreground="White" PageProvider="{Binding ElementName=AttachedView}" />
+            <Grid Grid.Column="4" Grid.Row="1" Grid.RowSpan="4" MaxWidth="500" Canvas.ZIndex="1" Margin="10,10,20,10">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
@@ -87,12 +87,7 @@
                 <ScrollViewer VerticalAlignment="Stretch" MaxHeight="350" Margin="0,0,0,50" Grid.RowSpan="3" VerticalScrollMode="Auto" VerticalScrollBarVisibility="Auto">
                     <TextBlock x:Name="WorkpadLabel" MaxWidth="500" Margin="0,0,18,0" VerticalAlignment="Stretch" TextWrapping="WrapWholeWords" HorizontalAlignment="Left" Text="" Foreground="White" FontSize="20" />
                 </ScrollViewer>
-                <Button x:Name="WorkpadButton" Content="Edit Workpad" VerticalAlignment="Bottom" Grid.Row="2" Canvas.ZIndex="10" Foreground="White" FontSize="20" Tapped="WorkpadButton_Tapped" />
-                <Button x:Name="WorkpadSaveButton" Content="Save" Grid.Row="2" VerticalAlignment="Bottom" Canvas.ZIndex="10" Foreground="White" FontSize="20" Visibility="Collapsed" Tapped="WorkpadSaveButton_Tapped" />
-                <Button x:Name="WorkpadCancelButton" Content="Cancel" Grid.Row="2" VerticalAlignment="Bottom" Canvas.ZIndex="10" Margin="80,0,0,0" Foreground="White" FontSize="20" Visibility="Collapsed" Tapped="WorkpadCancelButton_Tapped" />
-                <RichEditBox x:Name="WorkpadEditBox" Margin="0,0,0,50" Grid.Row="2" Typography.StylisticSet1="True" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Visibility="Collapsed"  />
             </Grid>
-            <Rectangle Grid.ColumnSpan="2" Grid.Row="1" Canvas.ZIndex="0" Grid.Column="4" Grid.RowSpan="4" Fill="#4C9F6300" HorizontalAlignment="Stretch" Margin="0,0,10,0" />
         </Grid>
         <VisualStateManager.VisualStateGroups>
 
