--- a/SherpaDesk/Timesheet.xaml
+++ b/SherpaDesk/Timesheet.xaml
@@ -62,9 +62,77 @@
                     <ColumnDefinition Width="auto" />
                     <ColumnDefinition Width="10" />
                     <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="30" />
                 </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                </Grid.RowDefinitions>
                 <TextBlock x:Name="DateLabel" Grid.Column="0" FontSize="40" />
                 <telerikInput:RadDatePicker x:Name="DateField" Grid.Column="2" Height="60" Width="30" FontSize="40" Grid.Row="0" DisplayValueFormat="dddd, MMMM dd, yyyy" ItemLength="90" Margin="0,-10,0,0" />
+
+                <Grid Grid.Row="1" Grid.ColumnSpan="3" HorizontalAlignment="Stretch" Width="570">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto" />
+                        <ColumnDefinition Width="10" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="auto" />
+                    </Grid.RowDefinitions>
+                    <TextBlock HorizontalAlignment="left" Grid.Row="0" Margin="10,10,0,0" TextWrapping="Wrap" Text="Technician" VerticalAlignment="Top" FontSize="24"/>
+                    <ComboBox Name="TechnicianList" Grid.Column="2" Grid.Row="0" FontSize="24" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="0,10,0,0" />
+
+                    <TextBlock HorizontalAlignment="left" Grid.Row="1" Margin="10,10,0,0" TextWrapping="Wrap" Text="Account" VerticalAlignment="Top" FontSize="24"/>
+                    <ComboBox Name="AccountList" Grid.Column="2" Grid.Row="1" FontSize="24" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="0,10,0,0" />
+
+                    <TextBlock HorizontalAlignment="left" Grid.Row="2" Margin="10,10,0,0" TextWrapping="Wrap" Text="Task Type" VerticalAlignment="Top" FontSize="24"/>
+                    <ComboBox Name="TaskTypeList" Grid.Column="2" Grid.Row="2" FontSize="24" VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="0,10,0,0" />
+
+                    <TextBlock HorizontalAlignment="left" Grid.Row="4" Margin="10,10,0,0" TextWrapping="Wrap" Text="Billable" VerticalAlignment="Top" FontSize="24"/>
+                    <CheckBox Name="BillableBox" HorizontalAlignment="Left" Margin="0,10,0,0" Grid.Column="2" Grid.Row="4" VerticalAlignment="Top" FontSize="20" IsChecked="True"/>
+
+                    <TextBlock HorizontalAlignment="left" Grid.Row="5" Margin="10,10,0,0" TextWrapping="Wrap" Text="Start Time" VerticalAlignment="Top" FontSize="24" />
+                    <Grid Grid.Column="2" Grid.Row="5" Margin="0,5,0,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="auto" />
+                            <ColumnDefinition Width="10" />
+                            <ColumnDefinition Width="auto" />
+                        </Grid.ColumnDefinitions>
+                        <TextBlock x:Name="StartTimeLabel" Grid.Column="0" FontSize="24" VerticalAlignment="Top" Margin="0,5,0,0" />
+                        <telerikInput:RadTimePicker x:Name="StartTimePicker" Grid.Column="2" Height="30" Width="30" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" ValueChanged="StartTimePicker_ValueChanged" />
+                    </Grid>
+
+                    <TextBlock HorizontalAlignment="left" Grid.Row="6" Margin="10,10,0,0" TextWrapping="Wrap" Text="End Time" VerticalAlignment="Top" FontSize="24" />
+                    <Grid Grid.Column="2" Grid.Row="6" Margin="0,5,0,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="auto" />
+                            <ColumnDefinition Width="10" />
+                            <ColumnDefinition Width="auto" />
+                        </Grid.ColumnDefinitions>
+                        <TextBlock x:Name="EndTimeLabel" Grid.Column="0" FontSize="24" VerticalAlignment="Top" Margin="0,5,0,0" />
+                        <telerikInput:RadTimePicker x:Name="EndTimePicker" Grid.Column="2" Height="30" Width="30" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" ValueChanged="EndTimePicker_ValueChanged" />
+                    </Grid>
+                    
+                    <TextBlock HorizontalAlignment="left" Grid.Row="7" Margin="10,10,0,0" TextWrapping="Wrap" Text="Hours" VerticalAlignment="Top" FontSize="24" />
+                    <TextBox x:Name="HoursTextBox" Margin="0,5,0,0" HorizontalAlignment="Left" Height="35" InputScope="NumberFullWidth" Text="0.00" Grid.Row="7" TextWrapping="Wrap" Grid.Column="2" VerticalAlignment="Top" FontSize="20" Width="130" />
+                    
+                    <TextBlock HorizontalAlignment="left" Grid.Row="8" Margin="10,10,0,0" TextWrapping="Wrap" Text="Notes" VerticalAlignment="Top" FontSize="24" />
+                    <TextBox x:Name="NoteTextBox" Margin="0,5,0,0" HorizontalAlignment="Stretch" Height="100" InputScope="NumberFullWidth" Grid.Row="8" TextWrapping="Wrap" Grid.Column="2" VerticalAlignment="Top" FontSize="20" />
+                   
+                    <Button Content="Save Time" Grid.Column="0" HorizontalAlignment="Left" Margin="0,14,0,0" Grid.ColumnSpan="3" Grid.Row="9" VerticalAlignment="Top" Height="50" Grid.RowSpan="2" Width="200" FontSize="24" Background="#FF2F9129" />
+
+                </Grid>                    
+                
                 <GridView x:Name="TimesheetGridView" Visibility="Collapsed" Grid.Column="0" Grid.Row="2" Margin="20">
                     <GridView.ItemTemplate>
                         <DataTemplate>
